examples/negative/pipes/pipe_result_rejected.kai
# Issue #594 — `Result` keeps its existing per-head rejection
# diagnostic (issue #201 Constraint #1). Mirrors the `Option`
# rejection regression guard.

fn main() : Int {
  let r = Ok(42) | (n) => n + 1
  0
}
